--- a/src/about-us.html
+++ b/src/about-us.html
@@ -178,13 +178,15 @@
         <h1>About us</h1>
       </div>
     </section>
-    <div class="bread">
+    <section class="bread">
       <div class="bread__inner inner">
-        <a href="index.html" class="bread__top">TOP</a>
-        <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
-        <div class="bread__detail">私たちについて</div>
+        <div class="bread__page">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
+          <div class="bread__detail">私たちについて</div>
+        </div>
       </div>
-    </div>
+    </section>
     <section class="about-us about-us-wrapper">
       <div class="about-us__inner inner">
         <div class="about-us__img-wrapper">
@@ -210,20 +212,22 @@
           <p class="section-titles__english">Gallery</p>
           <h2 class="section-titles__japanese">フォト</h2>
         </div>
-        <div class="gallery__container-wrapper gallery__container ">
-          <div class="gallery__photo" id="modal01"><img src="./assets/images/common/gallery1.png"
+        <div class="gallery__photos-wrapper photos ">
+          <div class="photos__item photo" id="modal01"><img src="./assets/images/common/gallery1.png"
               alt="海中の大きな珊瑚に赤い小さな魚が群がっている写真">
           </div>
-          <div class="gallery__photo" id="modal02"><img src="./assets/images/common/gallery2.png" alt="海の浅瀬に浮かぶ船写真">
+          <div class="photos__item photo" id="modal02"><img src="./assets/images/common/gallery2.png" alt="海の浅瀬に浮かぶ船写真">
           </div>
-          <div class="gallery__photo" id="modal03"><img src="./assets/images/common/gallery3.png"
+          <div class="photos__item photo" id="modal03"><img src="./assets/images/common/gallery3.png"
               alt="白地に黒の縞模様の魚が2匹いる写真">
           </div>
-          <div class="gallery__photo" id="modal04"><img src="./assets/images/common/gallery4.png" alt="黄色い魚が1匹泳いでいる写真">
+          <div class="photos__item photo" id="modal04"><img src="./assets/images/common/gallery4.png"
+              alt="黄色い魚が1匹泳いでいる写真">
           </div>
-          <div class="gallery__photo" id="modal05"><img src="./assets/images/common/gallery5.png" alt="小さな魚の魚群が泳いでいる写真">
+          <div class="photos__item photo" id="modal05"><img src="./assets/images/common/gallery5.png"
+              alt="小さな魚の魚群が泳いでいる写真">
           </div>
-          <div class="gallery__photo" id="modal06"><img src="./assets/images/common/gallery6.png"
+          <div class="photos__item photo" id="modal06"><img src="./assets/images/common/gallery6.png"
               alt="サンゴ礁で黄色い魚が泳いでいる写真">
           </div>
         </div>
