--- a/src/blog.html
+++ b/src/blog.html
@@ -180,13 +180,15 @@
         <h1>Blog</h1>
       </div>
     </section>
-    <div class="bread">
+    <section class="bread">
       <div class="bread__inner inner">
-        <a href="index.html" class="bread__top">TOP</a>
-        <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt=""></div>
-        <div class="bread__detail">ブログ一覧</div>
+        <div class="bread__page">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
+          <div class="bread__detail">ブログ</div>
+        </div>
       </div>
-    </div>
+    </section>
     <div class="blog-layout inner">
       <article class="blog-layout__blog blog">
         <div class="blog__cards blog-cards blog-cards--blog-page">
