--- a/src/price.html
+++ b/src/price.html
@@ -137,8 +137,7 @@
                 <div class="site-map__sub-group">
                   <ul class="site-map__sub-titles">
                     <li class="site-map__sub-title"><a href="./information.html#license-info">ライセンス講習</a></li>
-                    <li class="site-map__sub-title"><a href="./information.html#tr class="
-                        menu__list"ial-info">体験ダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./information.html#trial-info">体験ダイビング</a></li>
                     <li class="site-map__sub-title"><a href="./information.html#fun-info">ファンダイビング</a></li>
                   </ul>
                 </div>
@@ -180,189 +179,192 @@
         <h1>Price</h1>
       </div>
     </section>
-    <div class="bread">
+    <section class="bread">
       <div class="bread__inner inner">
-        <a href="index.html" class="bread__top">TOP</a>
-        <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
-        <div class="bread__detail">料金一覧</div>
+        <div class="bread__page">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
+          <div class="bread__detail">料金一覧</div>
+        </div>
       </div>
-      <section class="price price-wrapper">
-        <div class="price__inner inner">
-          <div class="price__menu-wrapper menus">
-            <div class="price__menu menus__item menu" id="license-price">
-              <div class="menu__title-wrapper">
-                <h2 class="menu__title">ライセンス取得</h2>
-                <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
-              </div>
-              <table class="menu__lists" aria-label="ライセンス講習">
-                <tbody>
-                  <tr>
-                    <td class="menu__name">
-                      オープンウォーター<br class="menu__pc-none">ダイバーコース
-                    </td>
-                    <td class="menu__yen">
-                      ¥50,000 </td>
-                  </tr>
-                  <tr>
-                    <td class="menu__name">
-                      アドバンスド<br class="menu__pc-none">オープンウォーターコース
-                    <td class="menu__yen">
-                      ¥60,000 </td>
-                  </tr>
-                  <tr>
-                    <td class="menu__name">
-                      レスキュー＋EFRコース
-                    </td>
-                    <td class="menu__yen">
-                      ¥70,000 </td>
-                  </tr>
-                </tbody>
-              </table>
+    </section>
+    <section class="price price-wrapper">
+      <div class="price__inner inner">
+        <div class="price__menu-wrapper menus">
+          <div class="price__menu menus__item menu" id="license-price">
+            <div class="menu__title-wrapper">
+              <h2 class="menu__title">ライセンス取得</h2>
+              <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
             </div>
-            <div class="price__menu menus__item menu" id="trial-price">
-              <div class="menu__title-wrapper">
-                <h2 class="menu__title">体験ダイビング</h2>
-                <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
-              </div>
-              <table class="menu__lists" aria-label="体験ダイビング">
-                <tbody>
-                  <tr>
-                    <td class="menu__name">
-                      ビーチ体験ダイビング<br class="menu__pc-none">(半日)
-                    </td>
-                    <td class="menu__yen">
-                      ¥7,000 </td>
-                  </tr>
-                  <tr>
-                    <td class="menu__name">
-                      ビーチ体験ダイビング<br class="menu__pc-none">(1日)
-                    <td class="menu__yen">
-                      ¥14,000</td>
-                  </tr>
-                  <tr>
-                    <td class="menu__name">
-                      ボート体験ダイビング<br class="menu__pc-none">(半日)
-                    </td>
-                    <td class="menu__yen">
-                      ¥10,000 </td>
-                  </tr>
-                  <tr>
-                    <td class="menu__name">
-                      ボート体験ダイビング<br class="menu__pc-none">(1日)
-                    </td>
-                    <td class="menu__yen">
-                      ¥18,000 </td>
-                  </tr>
-                </tbody>
-              </table>
+            <table class="menu__lists" aria-label="ライセンス講習">
+              <tbody>
+                <tr>
+                  <td class="menu__name">
+                    オープンウォーター<br class="menu__pc-none">ダイバーコース
+                  </td>
+                  <td class="menu__yen">
+                    ¥50,000 </td>
+                </tr>
+                <tr>
+                  <td class="menu__name">
+                    アドバンスド<br class="menu__pc-none">オープンウォーターコース
+                  <td class="menu__yen">
+                    ¥60,000 </td>
+                </tr>
+                <tr>
+                  <td class="menu__name">
+                    レスキュー＋EFRコース
+                  </td>
+                  <td class="menu__yen">
+                    ¥70,000 </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="price__menu menus__item menu" id="trial-price">
+            <div class="menu__title-wrapper">
+              <h2 class="menu__title">体験ダイビング</h2>
+              <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
             </div>
-            <div class="price__menu menus__item menu" id="fun-price">
-              <div class="menu__title-wrapper">
-                <h2 class="menu__title">ファンダイビング</h2>
-                <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
-              </div>
-              <table class="menu__lists" aria-label="ファンダイビング">
-                <tbody>
-                  <tr>
-                    <td class="menu__name">
-                      ビーチダイビング<br class="menu__pc-none">(2ダイブ)
-                    </td>
-                    <td class="menu__yen">
-                      ¥14,000 </td>
-                  </tr>
-                  <tr>
-                    <td class="menu__name">
-                      ボートダイビング<br class="menu__pc-none">(2ダイブ)
-                    <td class="menu__yen">
-                      ¥18,000</td>
-                  </tr>
-                  <tr>
-                    <td class="menu__name">
-                      スペシャルダイビング<br class="menu__pc-none">(2ダイブ)
-                    </td>
-                    <td class="menu__yen">
-                      ¥24,000 </td>
-                  </tr>
-                  <tr>
-                    <td class="menu__name">
-                      ナイトダイビング<br class="menu__pc-none">(1ダイブ)
-                    </td>
-                    <td class="menu__yen">
-                      ¥10,000 </td>
-                  </tr>
-                </tbody>
-              </table>
+            <table class="menu__lists" aria-label="体験ダイビング">
+              <tbody>
+                <tr>
+                  <td class="menu__name">
+                    ビーチ体験ダイビング<br class="menu__pc-none">(半日)
+                  </td>
+                  <td class="menu__yen">
+                    ¥7,000 </td>
+                </tr>
+                <tr>
+                  <td class="menu__name">
+                    ビーチ体験ダイビング<br class="menu__pc-none">(1日)
+                  <td class="menu__yen">
+                    ¥14,000</td>
+                </tr>
+                <tr>
+                  <td class="menu__name">
+                    ボート体験ダイビング<br class="menu__pc-none">(半日)
+                  </td>
+                  <td class="menu__yen">
+                    ¥10,000 </td>
+                </tr>
+                <tr>
+                  <td class="menu__name">
+                    ボート体験ダイビング<br class="menu__pc-none">(1日)
+                  </td>
+                  <td class="menu__yen">
+                    ¥18,000 </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="price__menu menus__item menu" id="fun-price">
+            <div class="menu__title-wrapper">
+              <h2 class="menu__title">ファンダイビング</h2>
+              <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
             </div>
-            <div class="price__menu menus__item menu" id="special-price">
-              <div class="menu__title-wrapper">
-                <h2 class="menu__title">スペシャルダイビング</h2>
-                <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
+            <table class="menu__lists" aria-label="ファンダイビング">
+              <tbody>
+                <tr>
+                  <td class="menu__name">
+                    ビーチダイビング<br class="menu__pc-none">(2ダイブ)
+                  </td>
+                  <td class="menu__yen">
+                    ¥14,000 </td>
+                </tr>
+                <tr>
+                  <td class="menu__name">
+                    ボートダイビング<br class="menu__pc-none">(2ダイブ)
+                  <td class="menu__yen">
+                    ¥18,000</td>
+                </tr>
+                <tr>
+                  <td class="menu__name">
+                    スペシャルダイビング<br class="menu__pc-none">(2ダイブ)
+                  </td>
+                  <td class="menu__yen">
+                    ¥24,000 </td>
+                </tr>
+                <tr>
+                  <td class="menu__name">
+                    ナイトダイビング<br class="menu__pc-none">(1ダイブ)
+                  </td>
+                  <td class="menu__yen">
+                    ¥10,000 </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="price__menu menus__item menu" id="special-price">
+            <div class="menu__title-wrapper">
+              <h2 class="menu__title">スペシャルダイビング</h2>
+              <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
+            </div>
+            <table class="menu__lists" aria-label="スペシャルダイビング">
+              <tbody>
+                <tr>
+                  <td class="menu__name">
+                    貸切ダイビング<br class="menu__pc-none">(2ダイブ)
+                  </td>
+                  <td class="menu__yen">
+                    ¥24,000 </td>
+                </tr>
+                <tr>
+                  <td class="menu__name">
+                    1日ダイビング<br class="menu__pc-none">(3ダイブ)
+                  <td class="menu__yen">
+                    ¥32,000</td>
+                </tr>
+                <tr>
+                  <td class="menu__name">
+                    ナイトダイビング<br class="menu__pc-none">(2ダイブ)
+                  </td>
+                  <td class="menu__yen">
+                    ¥14,000 </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--contact-->
+    <section class="contact contact-wrapper contact-wrapper--price">
+      <div class="contact__inner inner">
+        <div class="contact__content-inner">
+          <div class="contact__address-wrapper">
+            <div class="contact__info-wrapper">
+              <div class="contact__logo logo"><img src="./assets/images/common/contact-logo.png" alt="コードアップスのロゴ" />
               </div>
-              <table class="menu__lists" aria-label="スペシャルダイビング">
-                <tbody>
-                  <tr>
-                    <td class="menu__name">
-                      貸切ダイビング<br class="menu__pc-none">(2ダイブ)
-                    </td>
-                    <td class="menu__yen">
-                      ¥24,000 </td>
-                  </tr>
-                  <tr>
-                    <td class="menu__name">
-                      1日ダイビング<br class="menu__pc-none">(3ダイブ)
-                    <td class="menu__yen">
-                      ¥32,000</td>
-                  </tr>
-                  <tr>
-                    <td class="menu__name">
-                      ナイトダイビング<br class="menu__pc-none">(2ダイブ)
-                    </td>
-                    <td class="menu__yen">
-                      ¥14,000 </td>
-                  </tr>
-                </tbody>
-              </table>
+            </div>
+            <div class="contact__info">
+              <div class="contact__address">
+                <p>沖縄県那覇市1-1</p>
+                <a href="tel:0120-000-0000" class="contact__tel">TEL:0120-000-0000</a>
+                <p>営業時間:8:30-19:00</p>
+                <p>定休日:毎週火曜日</p>
+              </div>
+              <div class="contact__map"><iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6888.6383644040225!2d127.68185319225111!3d26.211610509147523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e5697141a6b58b%3A0x2cd8aff616585e98!2z5rKW57iE55yM6YKj6KaH5biC!5e0!3m2!1sja!2sjp!4v1713793644657!5m2!1sja!2sjp"
+                  width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+            </div>
+          </div>
+          <div class="contact__content">
+            <div class="contact__titles">
+              <p class="contact__titles-english">Contact</p>
+              <h2 class="contact__titles-japanese">お問い合わせ</h2>
+            </div>
+            <p class="contact__text">ご予約・お問い合わせはコチラ</p>
+            <div class="contact__btn-wrapper">
+              <a href="./contact-form.html" class="btn">Contact us
+                <span></span>
+              </a>
             </div>
           </div>
         </div>
-      </section>
-      <!--contact-->
-      <section class="contact contact-wrapper contact-wrapper--price">
-        <div class="contact__inner inner">
-          <div class="contact__content-inner">
-            <div class="contact__address-wrapper">
-              <div class="contact__info-wrapper">
-                <div class="contact__logo logo"><img src="./assets/images/common/contact-logo.png" alt="コードアップスのロゴ" />
-                </div>
-              </div>
-              <div class="contact__info">
-                <div class="contact__address">
-                  <p>沖縄県那覇市1-1</p>
-                  <a href="tel:0120-000-0000" class="contact__tel">TEL:0120-000-0000</a>
-                  <p>営業時間:8:30-19:00</p>
-                  <p>定休日:毎週火曜日</p>
-                </div>
-                <div class="contact__map"><iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6888.6383644040225!2d127.68185319225111!3d26.211610509147523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e5697141a6b58b%3A0x2cd8aff616585e98!2z5rKW57iE55yM6YKj6KaH5biC!5e0!3m2!1sja!2sjp!4v1713793644657!5m2!1sja!2sjp"
-                    width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-              </div>
-            </div>
-            <div class="contact__content">
-              <div class="contact__titles">
-                <p class="contact__titles-english">Contact</p>
-                <h2 class="contact__titles-japanese">お問い合わせ</h2>
-              </div>
-              <p class="contact__text">ご予約・お問い合わせはコチラ</p>
-              <div class="contact__btn-wrapper">
-                <a href="./contact-form.html" class="btn">Contact us
-                  <span></span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+      </div>
+    </section>
   </main>
   <!--footer-->
   <footer class="footer footer-wrapper" id="footer">
@@ -391,8 +393,7 @@
               <div class="site-map__sub-group">
                 <ul class="site-map__sub-titles">
                   <li class="site-map__sub-title"><a href="./campaign.html#license-campaign">ライセンス取得</a></li>
-                  <li class="site-map__sub-title"><a href="./campaign.html#tr class="
-                      menu__list"ial-campaign">貸切体験ダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./campaign.html#trial-campaign">貸切体験ダイビング</a></li>
                   <li class="site-map__sub-title"><a href="./campaign.html#fun-campaign">ナイトダイビング</a></li>
                 </ul>
               </div>
