--- a/src/site-map.html
+++ b/src/site-map.html
@@ -178,15 +178,19 @@
         <h1>Site MAP</h1>
       </div>
     </section>
-    <div class="inner">
-      <div class="bread">
-        <a href="index.html" class="bread__top">TOP</a>
-        <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
-        <div class="bread__detail">サイトマップ</div>
+    <section class="bread">
+      <div class="bread__inner inner">
+        <div class="bread__page">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
+          <div class="bread__detail">サイトマップ</div>
+        </div>
       </div>
-      <section class="site-map-wrapper ">
-        <nav class="site-map site-map--lower">
-          <div class="site-map__sp-layout site-map__sp-layout--lower">
+    </section>
+    <section class="site-map-page site-map-page-wrapper">
+      <div class="site-map-page__inner inner">
+        <nav class="site-map-page__nav site-map site-map--page">
+          <div class="site-map__sp-layout site-map__sp-layout--page">
             <div class="site-map__content">
               <div class="site-map__main-title site-map__main-title--layout site-map__main-title--black"><a
                   href="./campaign.html">キャンペーン</a></div>
@@ -237,11 +241,13 @@
               </li>
               <li class="site-map__main-title site-map__main-title--black"><a href="./contact-form.html">お問い合わせ</a>
               </li>
+              <li class="site-map__main-title site-map__main-title--black"><a href="./site-map.html">サイトマップ</a></li>
+
             </ul>
           </div>
         </nav>
-      </section>
-    </div>
+      </div>
+    </section>
     <!--contact-->
     <section class="contact contact-wrapper contact-wrapper--site-map">
       <div class="contact__inner inner">
