--- a/src/voice.html
+++ b/src/voice.html
@@ -180,13 +180,15 @@
         <h1>Voice</h1>
       </div>
     </section>
-    <div class="bread">
+    <section class="bread">
       <div class="bread__inner inner">
-        <a href="index.html" class="bread__top">TOP</a>
-        <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
-        <div class="bread__detail">お客様の声</div>
+        <div class="bread__page">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
+          <div class="bread__detail">お客様の声</div>
+        </div>
       </div>
-    </div>
+    </section>
     <section class="voice voice-wrapper">
       <div class="voice__inner inner">
         <div class="voice__tabs tabs">
@@ -195,152 +197,154 @@
           <a href="#" class="tabs__item tab">ファンダイビング</a>
           <a href="#" class="tabs__item tab">体験ダイビング</a>
         </div>
-        <div class="voice__cards voice-cards">
-          <div class="voice-cards__item voice-card">
-            <div class="voice-card__info">
-              <div class="voice-card__customer-data-wrapper">
-                <div class="voice-card__customer-data">
-                  <div class="voice-card__customer-age">20代(女性)</div>
-                  <div class="voice-card__category">ライセンス講習</div>
+        <div class="voice__cards-inner">
+          <div class="voice__cards voice-cards">
+            <div class="voice-cards__item voice-card">
+              <div class="voice-card__info">
+                <div class="voice-card__customer-data-wrapper">
+                  <div class="voice-card__customer-data">
+                    <div class="voice-card__customer-age">20代(女性)</div>
+                    <div class="voice-card__category">ライセンス講習</div>
+                  </div>
+                  <div class="voice-card__title-wrapper">
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
                 </div>
-                <div class="voice-card__title-wrapper">
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
-                </div>
+                <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice1.png"
+                    alt="お客様女性の写真" />
+                </figure>
               </div>
-              <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice1.png"
-                  alt="お客様女性の写真" />
-              </figure>
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+              </p>
             </div>
-            <p class="voice-card__text">
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
-            </p>
-          </div>
-          <div class="voice-cards__item voice-card">
-            <div class="voice-card__info">
-              <div class="voice-card__customer-data-wrapper">
-                <div class="voice-card__customer-data">
-                  <div class="voice-card__customer-age">30代(男性)</div>
-                  <div class="voice-card__category">ファンダイビング</div>
+            <div class="voice-cards__item voice-card">
+              <div class="voice-card__info">
+                <div class="voice-card__customer-data-wrapper">
+                  <div class="voice-card__customer-data">
+                    <div class="voice-card__customer-age">30代(男性)</div>
+                    <div class="voice-card__category">ファンダイビング</div>
+                  </div>
+                  <div class="voice-card__title-wrapper">
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
                 </div>
-                <div class="voice-card__title-wrapper">
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
-                </div>
+                <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice2.png"
+                    alt="お客様男性の写真" />
+                </figure>
               </div>
-              <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice2.png"
-                  alt="お客様男性の写真" />
-              </figure>
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+              </p>
             </div>
-            <p class="voice-card__text">
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
-            </p>
-          </div>
-          <div class="voice-cards__item voice-card">
-            <div class="voice-card__info">
-              <div class="voice-card__customer-data-wrapper">
-                <div class="voice-card__customer-data">
-                  <div class="voice-card__customer-age">30代(女性)</div>
-                  <div class="voice-card__category">体験ダイビング</div>
+            <div class="voice-cards__item voice-card">
+              <div class="voice-card__info">
+                <div class="voice-card__customer-data-wrapper">
+                  <div class="voice-card__customer-data">
+                    <div class="voice-card__customer-age">30代(女性)</div>
+                    <div class="voice-card__category">体験ダイビング</div>
+                  </div>
+                  <div class="voice-card__title-wrapper">
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
                 </div>
-                <div class="voice-card__title-wrapper">
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
-                </div>
+                <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice3.png"
+                    alt="お客様女性の写真" />
+                </figure>
               </div>
-              <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice3.png"
-                  alt="お客様女性の写真" />
-              </figure>
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+              </p>
             </div>
-            <p class="voice-card__text">
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
-            </p>
-          </div>
-          <div class="voice-cards__item voice-card">
-            <div class="voice-card__info">
-              <div class="voice-card__customer-data-wrapper">
-                <div class="voice-card__customer-data">
-                  <div class="voice-card__customer-age">30代(女性)</div>
-                  <div class="voice-card__category">体験ダイビング</div>
+            <div class="voice-cards__item voice-card">
+              <div class="voice-card__info">
+                <div class="voice-card__customer-data-wrapper">
+                  <div class="voice-card__customer-data">
+                    <div class="voice-card__customer-age">30代(女性)</div>
+                    <div class="voice-card__category">体験ダイビング</div>
+                  </div>
+                  <div class="voice-card__title-wrapper">
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
                 </div>
-                <div class="voice-card__title-wrapper">
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
-                </div>
+                <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice4.png"
+                    alt="お客様女性の写真" />
+                </figure>
               </div>
-              <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice4.png"
-                  alt="お客様女性の写真" />
-              </figure>
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+              </p>
             </div>
-            <p class="voice-card__text">
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
-            </p>
-          </div>
-          <div class="voice-cards__item voice-card">
-            <div class="voice-card__info">
-              <div class="voice-card__customer-data-wrapper">
-                <div class="voice-card__customer-data">
-                  <div class="voice-card__customer-age">30代(カップル)</div>
-                  <div class="voice-card__category">ファンダイビング</div>
+            <div class="voice-cards__item voice-card">
+              <div class="voice-card__info">
+                <div class="voice-card__customer-data-wrapper">
+                  <div class="voice-card__customer-data">
+                    <div class="voice-card__customer-age">30代(カップル)</div>
+                    <div class="voice-card__category">ファンダイビング</div>
+                  </div>
+                  <div class="voice-card__title-wrapper">
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
                 </div>
-                <div class="voice-card__title-wrapper">
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
-                </div>
+                <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice5.png"
+                    alt="お客様カップルの写真" />
+                </figure>
               </div>
-              <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice5.png"
-                  alt="お客様カップルの写真" />
-              </figure>
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+              </p>
             </div>
-            <p class="voice-card__text">
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
-            </p>
-          </div>
-          <div class="voice-cards__item voice-card">
-            <div class="voice-card__info">
-              <div class="voice-card__customer-data-wrapper">
-                <div class="voice-card__customer-data">
-                  <div class="voice-card__customer-age">20代(女性)</div>
-                  <div class="voice-card__category">ライセンス取得</div>
+            <div class="voice-cards__item voice-card">
+              <div class="voice-card__info">
+                <div class="voice-card__customer-data-wrapper">
+                  <div class="voice-card__customer-data">
+                    <div class="voice-card__customer-age">20代(女性)</div>
+                    <div class="voice-card__category">ライセンス取得</div>
+                  </div>
+                  <div class="voice-card__title-wrapper">
+                    <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+                  </div>
                 </div>
-                <div class="voice-card__title-wrapper">
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
-                </div>
+                <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice6.png"
+                    alt="お客様女性の写真" />
+                </figure>
               </div>
-              <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice6.png"
-                  alt="お客様女性の写真" />
-              </figure>
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+              </p>
             </div>
-            <p class="voice-card__text">
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
-            </p>
           </div>
-        </div>
-        <div class="voice__pager-wrapper">
-          <div class="voice__pager pager">
-            <a href="#" class="pager__before">
-              <svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path class="pager__path" d="M9 1L1 9L9 17" stroke="#408F95" stroke-linecap="round"
-                  stroke-linejoin="round" />
-              </svg>
-            </a>
-            <div class="pager__number-wrapper">
-              <a href="#" class="pager__number">1</a>
-              <a href="#" class="pager__number">2</a>
-              <a href="#" class="pager__number">3</a>
-              <a href="#" class="pager__number">4</a>
-              <a href="#" class="pager__number">5</a>
-              <a href="#" class="pager__number">6</a>
+          <div class="voice__pager-wrapper">
+            <div class="voice__pager pager">
+              <a href="#" class="pager__before">
+                <svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path class="pager__path" d="M9 1L1 9L9 17" stroke="#408F95" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </svg>
+              </a>
+              <div class="pager__number-wrapper">
+                <a href="#" class="pager__number">1</a>
+                <a href="#" class="pager__number">2</a>
+                <a href="#" class="pager__number">3</a>
+                <a href="#" class="pager__number">4</a>
+                <a href="#" class="pager__number">5</a>
+                <a href="#" class="pager__number">6</a>
+              </div>
+              <a href="#" class="pager__after">
+                <svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path class="pager__path" d="M1 1L9 9L1 17" stroke="#408F95" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </svg>
+              </a>
             </div>
-            <a href="#" class="pager__after">
-              <svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path class="pager__path" d="M1 1L9 9L1 17" stroke="#408F95" stroke-linecap="round"
-                  stroke-linejoin="round" />
-              </svg>
-            </a>
           </div>
         </div>
       </div>
