--- a/src/404.html
+++ b/src/404.html
@@ -174,11 +174,13 @@
   </header>
   <main>
     <section class="no-page__main">
-      <div class="no-page__bread bread">
+      <div class="bread">
         <div class="bread__inner inner">
-          <a href="index.html" class="bread__top">TOP</a>
-          <div class="bread__arrow"><img src="./assets/images/common/pager-white.png" alt="パンくず矢印"></div>
-          <div class="bread__detail">404</div>
+          <div class="bread__page">
+            <a href="index.html" class="bread__top">TOP</a>
+            <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
+            <div class="bread__detail">404</div>
+          </div>
         </div>
       </div>
       <div class="nopage__inner inner">
