--- a/src/contact-form-success.html
+++ b/src/contact-form-success.html
@@ -179,15 +179,17 @@
         <h1>Contact</h1>
       </div>
     </section>
-    <div class="bread">
+    <section class="bread">
       <div class="bread__inner inner">
-        <a href="index.html" class="bread__top">TOP</a>
-        <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt=""></div>
-        <div class="bread__detail">お問い合わせ</div>
-        <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt=""></div>
-        <div class="bread__detail">送信完了</div>
+        <div class="bread__page">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
+          <div class="bread__detail">お問い合わせ</div>
+          <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
+          <div class="bread__detail">送信完了</div>
+        </div>
       </div>
-    </div>
+    </section>
     <section class="contact-form contact-form-wrapper contact-form-wrapper--success">
       <div class="contact-form__inner inner">
         <h2 class="contact-form__success-title">お問い合わせ内容を送信完了しました。</h2>
