--- a/src/contact-form.html
+++ b/src/contact-form.html
@@ -180,80 +180,81 @@
         <h1>Contact</h1>
       </div>
     </section>
-    <div class="bread">
+    <section class="bread">
       <div class="bread__inner inner">
-        <a href="index.html" class="bread__top">TOP</a>
-        <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
-        <div class="bread__detail">お問い合わせ</div>
-        <div class="bread__arrow bread__arrow--error"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
-        <div class="bread__detail bread__arrow--error">お問い合わせエラー</div>
-      </div>
-      <section class="contact-form contact-form-wrapper">
-        <div class="contact-form__inner inner">
-          <div class="contact-form__error-texts">
-            <p class="contact-form__error-text">※必須項目が入力されていません。</p>
-            <p class="contact-form__error-text">入力してください。</p>
-          </div>
-          <form action="confirm.php" class="contact-form__form" method="post" name="form" onsubmit="return validate()">
-            <div class="contact-form__item">
-              <label class="contact-form__label">お名前<span>必須</span></label>
-              <input type="text" name="name" class="contact-form__text" placeholder="沖縄　太郎" />
-            </div>
-            <div class="contact-form__item">
-              <label class="contact-form__label">メールアドレス<span>必須</span></label>
-              <input type="text" name="email" class="contact-form__text" placeholder="aaa000@ggmail.com" />
-            </div>
-            <div class="contact-form__item">
-              <label class="contact-form__label">電話番号<span>必須</span></label>
-              <input type="text" name="tel" class="contact-form__text" placeholder="000-0000-0000" />
-            </div>
-            <div class="contact-form__item">
-              <label class="contact-form__label">お問い合わせ項目<span>必須</span></label>
-              <div class="contact-form__checks">
-                <div class="contact-form__check">
-                  <input type="checkbox" name="diving" id="license-diving" class="contact-form__checkbox" />
-                  <label for="license-diving">ダイビング講習について</label>
-                </div>
-                <div class="contact-form__check">
-                  <input type="checkbox" name="fun-diving" id="fun-diving" class="contact-form__checkbox" />
-                  <label for="fun-diving">ファンダイビングについて</label>
-                </div>
-                <div class="contact-form__check">
-                  <input type="checkbox" name="diving" id="trial-diving" class="contact-form__checkbox" />
-                  <label for="trial-diving">体験ダイビングについて</label>
-                </div>
-                <div class="contact-form__check">
-                  <input type="checkbox" name="diving" id="special-diving" class="contact-form__checkbox" />
-                  <label for="special-diving">スペシャルダイビングについて</label>
-                </div>
-              </div>
-            </div>
-            <div class="contact-form__item">
-              <label class="contact-form__label">キャンペーン</label>
-              <div class="contact-form__contents">
-                <select name="campaign" class="contact-form__select">
-                  <option value="キャンペーン内容を選択" class="contact-form__content">キャンペーン内容を選択</option>
-                  <option value="キャンペーン内容を選択" class="contact-form__content">キャンペーン内容を選択</option>
-                  <option value="キャンペーン内容を選択" class="contact-form__content">キャンペーン内容を選択</option>
-                </select>
-              </div>
-            </div>
-            <div class="contact-form__item">
-              <label class="contact-form__label">お問い合わせ内容<span>必須</span></label>
-              <textarea name="content" class="contact-form__textarea"></textarea>
-            </div>
-            <div class="contact-form__agreement">
-              <input type="checkbox" name="agreement" id="agreement" class="contact-form__checkbox" />
-              <label for="agreement">個人情報の取り扱いについて同意のうえ<wbr />送信します。</label>
-            </div>
-            <div class="contact-form__btn-wrapper">
-              <a href="./contact-form-success.html" class="btn">Send
-                <span></span>
-              </a>
-            </div>
-          </form>
+        <div class="bread__page">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
+          <div class="bread__detail">お問い合わせ</div>
         </div>
-      </section>
+      </div>
+    </section>
+    <section class="contact-form contact-form-wrapper">
+      <div class="contact-form__inner inner">
+        <div class="contact-form__error-texts">
+          <p class="contact-form__error-text">※必須項目が入力されていません。</p>
+          <p class="contact-form__error-text">入力してください。</p>
+        </div>
+        <form action="confirm.php" class="contact-form__form" method="post" name="form" onsubmit="return validate()">
+          <div class="contact-form__item">
+            <label class="contact-form__label">お名前<span>必須</span></label>
+            <input type="text" name="name" class="contact-form__text" placeholder="沖縄　太郎" />
+          </div>
+          <div class="contact-form__item">
+            <label class="contact-form__label">メールアドレス<span>必須</span></label>
+            <input type="text" name="email" class="contact-form__text" placeholder="aaa000@ggmail.com" />
+          </div>
+          <div class="contact-form__item">
+            <label class="contact-form__label">電話番号<span>必須</span></label>
+            <input type="text" name="tel" class="contact-form__text" placeholder="000-0000-0000" />
+          </div>
+          <div class="contact-form__item">
+            <label class="contact-form__label">お問い合わせ項目<span>必須</span></label>
+            <div class="contact-form__checks">
+              <div class="contact-form__check">
+                <input type="checkbox" name="diving" id="license-diving" class="contact-form__checkbox" />
+                <label for="license-diving">ダイビング講習について</label>
+              </div>
+              <div class="contact-form__check">
+                <input type="checkbox" name="fun-diving" id="fun-diving" class="contact-form__checkbox" />
+                <label for="fun-diving">ファンダイビングについて</label>
+              </div>
+              <div class="contact-form__check">
+                <input type="checkbox" name="diving" id="trial-diving" class="contact-form__checkbox" />
+                <label for="trial-diving">体験ダイビングについて</label>
+              </div>
+              <div class="contact-form__check">
+                <input type="checkbox" name="diving" id="special-diving" class="contact-form__checkbox" />
+                <label for="special-diving">スペシャルダイビングについて</label>
+              </div>
+            </div>
+          </div>
+          <div class="contact-form__item">
+            <label class="contact-form__label">キャンペーン</label>
+            <div class="contact-form__contents">
+              <select name="campaign" class="contact-form__select">
+                <option value="キャンペーン内容を選択" class="contact-form__content">キャンペーン内容を選択</option>
+                <option value="キャンペーン内容を選択" class="contact-form__content">キャンペーン内容を選択</option>
+                <option value="キャンペーン内容を選択" class="contact-form__content">キャンペーン内容を選択</option>
+              </select>
+            </div>
+          </div>
+          <div class="contact-form__item">
+            <label class="contact-form__label">お問い合わせ内容<span>必須</span></label>
+            <textarea name="content" class="contact-form__textarea"></textarea>
+          </div>
+          <div class="contact-form__agreement">
+            <input type="checkbox" name="agreement" id="agreement" class="contact-form__checkbox" />
+            <label for="agreement">個人情報の取り扱いについて同意のうえ<wbr />送信します。</label>
+          </div>
+          <div class="contact-form__btn-wrapper">
+            <a href="./contact-form-success.html" class="btn">Send
+              <span></span>
+            </a>
+          </div>
+        </form>
+      </div>
+    </section>
     </div>
   </main>
   <!--footer-->
