--- a/src/privacy.html
+++ b/src/privacy.html
@@ -178,11 +178,15 @@
         <h1>Privacy Policy</h1>
       </div>
     </section>
-    <div class="bread">
-      <a href="index.html" class="bread__top">TOP</a>
-      <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
-      <div class="bread__detail">プライバシーポリシー</div>
-    </div>
+    <section class="bread">
+      <div class="bread__inner inner">
+        <div class="bread__page">
+          <a href="index.html" class="bread__top">TOP</a>
+          <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
+          <div class="bread__detail">プライバシーポリシー</div>
+        </div>
+      </div>
+    </section>
     <section class="privacy">
       <div class="privacy__inner inner">
         <div class="privacy__title-wrapper">
